WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162654
AX: CrashTracer: com.apple.WebKit.WebContent at WebCore::AXObjectCache::localCaretRectForCharacterOffset(WebCore::RenderObject*&, WebCore::CharacterOffset const&) + 116
https://bugs.webkit.org/show_bug.cgi?id=162654
Summary
AX: CrashTracer: com.apple.WebKit.WebContent at WebCore::AXObjectCache::local...
Nan Wang
Reported
2016-09-27 18:42:33 PDT
0 com.apple.WebCore 0x00007fffb005b461 WebCore::Range::startPosition() const + 17 1 com.apple.WebCore 0x00007fffb0195b64 WebCore::AXObjectCache::localCaretRectForCharacterOffset(WebCore::RenderObject*&, WebCore::CharacterOffset const&) + 116 2 com.apple.WebCore 0x00007fffb0195c88 WebCore::AXObjectCache::absoluteCaretBoundsForCharacterOffset(WebCore::CharacterOffset const&) + 40 3 com.apple.WebCore 0x00007fffb011c363 WebCore::AccessibilityRenderObject::boundsForRange(WTF::RefPtr<WebCore::Range>) const + 435 4 com.apple.WebCore 0x00007fffb0e96e28 -[WebAccessibilityObjectWrapper accessibilityAttributeValue:forParameter:] + 7736 <
rdar://problem/28483775
>
Attachments
patch
(3.89 KB, patch)
2016-09-27 18:49 PDT
,
Nan Wang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nan Wang
Comment 1
2016-09-27 18:49:04 PDT
Created
attachment 290047
[details]
patch
WebKit Commit Bot
Comment 2
2016-09-27 21:11:42 PDT
Comment on
attachment 290047
[details]
patch Clearing flags on attachment: 290047 Committed
r206494
: <
http://trac.webkit.org/changeset/206494
>
WebKit Commit Bot
Comment 3
2016-09-27 21:11:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug